@@ -1,3 +1,8 @@
+2005-07-22 Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/16940
+	* gfortran.dg/module_interface.f90: New test.
+
 2005-07-21  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.c-torture/compile/20050721-1.c: New test for 3.4 fix.
